# LogicGames

./: README.md
RememberNames/: FlaskRememberNames.py  pyproject.toml
RememberNames/static/: scripts.js  styles.css
RememberNames/templates/: index.html
web_test/: index.html  test1.html
