[project]
name = "RememberNames"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = "jhonyrf@gmail.com"},
]
dependencies = ["flask>=3.1.2"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
